# corgi_ros_ws

./: .gitignore  .gitmodules  README.md
input_csv/: demo.csv
src/: CMakeLists.txt
src/corgi_control_packages/corgi_csv_control/: package.xml
src/corgi_control_packages/corgi_data_recorder/: package.xml
src/corgi_control_packages/corgi_impedance_control/: CMakeLists.txt  package.xml
src/corgi_control_packages/corgi_impedance_control/src/: CMakeLists.txt  force_estimation.cpp  imp_test.cpp  motor_state_pub.cpp
src/corgi_control_packages/corgi_odometry/: CMakeLists.txt
src/corgi_control_packages/corgi_odometry/src/: CMakeLists.txt
src/corgi_control_packages/corgi_utils/: README.md  package.xml
src/corgi_control_packages/corgi_utils/include/: fitted_coefficient.hpp  leg_model.hpp
src/corgi_control_packages/corgi_utils/src/: CMakeLists.txt
src/corgi_control_packages/csv_control/: CMakeLists.txt  package.xml
src/corgi_control_packages/csv_control/input_csv/: demo.csv  test.csv
src/corgi_control_packages/csv_control/src/: CMakeLists.txt  csv_control.cpp
src/corgi_control_packages/csv_controller/: CMakeLists.txt  package.xml
src/corgi_control_packages/csv_controller/src/: CMakeLists.txt  csv_controller.cpp
src/corgi_control_packages/data_recorder/: CMakeLists.txt  package.xml
src/corgi_control_packages/data_recorder/output_data/: demo.csv  demo_1.csv  demo_2.csv
src/corgi_control_packages/data_recorder/src/: CMakeLists.txt  data_recorder.cpp
src/corgi_control_packages/impedance_control/: CMakeLists.txt  package.xml
src/corgi_control_packages/impedance_control/include/: force_estimation.hpp
src/corgi_control_packages/impedance_control/launch/: impedance_control.launch
src/corgi_control_packages/impedance_control/src/: CMakeLists.txt  force_estimate.cpp  force_estimation.cpp  imp_test.cpp  motor_state_pub.cpp
src/corgi_control_packages/impedance_controller/src/: CMakeLists.txt  force_estimate.cpp
src/corgi_csv_control/: CMakeLists.txt
src/corgi_csv_control/src/: CMakeLists.txt  corgi_csv_control.cpp
src/corgi_data_recorder/: CMakeLists.txt
src/corgi_data_recorder/src/: CMakeLists.txt  corgi_data_recorder.cpp
src/corgi_impedance_control/include/: impedance_control.hpp
src/corgi_impedance_control/launch/: corgi_impedance_control.launch
src/corgi_impedance_control/src/: CMakeLists.txt  force_estimation.cpp  imp_cmd_pub.cpp  impedance_control.cpp  motor_state_pub.cpp
src/corgi_legwheel_transform/: LegModel.py  swing.py  transform_calculater.py
src/corgi_msgs/: CMakeLists.txt  package.xml
src/corgi_msgs/msg/: ForceState.msg  ForceStateStamped.msg  Headers.msg  ImpedanceCmd.msg  ImpedanceCmdStamped.msg  MotorCmd.msg  MotorCmdStamped.msg  MotorState.msg  MotorStateStamped.msg  PowerCmdStamped.msg  PowerStateStamped.msg  SensorEnableStamped.msg  TriggerStamped.msg
src/corgi_odometry/: CMakeLists.txt  package.xml
src/corgi_odometry/data/: data01.csv  out_data01_kld.csv
src/corgi_odometry/include/KLD_estimation/: ContactMap.hpp  InformationFilter.hpp  csv_reader.hpp
src/corgi_odometry/include/kinematic/: CLeg.hpp  Leg.hpp  LinkLegModel.hpp
src/corgi_odometry/src/KLD_estimation/: CMakeLists.txt  InformationFilter.cpp
src/corgi_odometry/src/corgi_odometry/: corgi_odometry.cpp
src/corgi_odometry/src/kinematic/: CMakeLists.txt  Leg.cpp  LinkLegModel.cpp
src/corgi_odometry/tests/: CMakeLists.txt  IF_main.cpp  quicktest.cpp
src/corgi_panel/: CMakeLists.txt  package.xml
src/corgi_panel/launch/: corgi_control_panel.launch
src/corgi_panel/scripts/: corgi_control_panel.py
src/corgi_ros_bridge/: CMakeLists.txt  package.xml
src/corgi_ros_bridge/config/: config.yaml
src/corgi_ros_bridge/launch/: bridge.launch  bridge_real.launch  bridge_sim.launch  corgi_ros_bridge.launch
src/corgi_ros_bridge/msg/: LegStamped.msg  RobotStamped.msg  motor.msg
src/corgi_ros_bridge/scripts/: corgi_ros_bridge.sh  force_publisher.py  force_subscriber.py  motor_publisher.py  robot_state_subscriber.py  robot_state_subscriber_test.py  ros_motor_cmd_pub.py  ros_motor_state_sub.py  ros_power_cmd_pub.py  ros_power_state_sub.py  run_NodeCore.sh  run_bridge.sh  run_bridge_real.sh  run_bridge_sim.sh  run_webots.sh
src/corgi_ros_bridge/src/: CMakeLists.txt  corgi_ros_bridge.cpp  corgi_ros_bridge.hpp  grpc_motor_cmd_sub.cpp  grpc_motor_state_pub.cpp  grpc_power_cmd_sub.cpp  grpc_power_state_pub.cpp
src/corgi_sim/: CMakeLists.txt  package.xml
src/corgi_sim/launch/: run_simulation.launch
src/corgi_sim/protos/: corgi_old.proto  leg_old.proto
src/corgi_sim/scripts/: webots_launcher.py
src/corgi_sim/src/: CMakeLists.txt  corgi_sim.cpp
src/corgi_sim/worlds/: corgi_old_proto.wbt
src/corgi_utils/: CMakeLists.txt
src/corgi_utils/include/: leg_model.hpp
src/corgi_utils/src/: leg_model.cpp
src/corgi_virtual_agent/: CMakeLists.txt  package.xml
src/corgi_virtual_agent/src/: CMakeLists.txt  corgi_virtual_agent.cpp
