<?xml version="1.0"?>
<package format="2">
  <!-- Package Name -->
  <name>corgi_ros_bridge</name>

  <!-- Version Number -->
  <version>0.0.0</version>

  <!-- Package Description -->
  <description>
    This is corgi_ros_bridge package.
  </description>

  <!-- Maintainer Information -->
  <maintainer email="r12522823@ntu.edu.tw">Eason Shen</maintainer>

  <!-- License Information -->
  <license>MIT</license>

  <!-- Author Information -->
  <!-- If you have additional authors, add them here -->
  <!-- Example:
       <author email="john.doe@example.com">John Doe</author>
  -->

  <!-- URL Information -->
  <!-- Optional: Add links to the website, repository, or bug tracker -->
  <!-- Examples:
       <url type="website">http://wiki.ros.org/corgi_ros_bridge</url>
       <url type="repository">https://github.com/yourusername/corgi_ros_bridge</url>
       <url type="bugtracker">https://github.com/yourusername/corgi_ros_bridge/issues</url>
  -->

  <!-- Build Tool Dependencies -->
  <!-- 'catkin' is required for building ROS packages -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build Dependencies -->
  <!-- Packages required at compile time -->
  <build_depend>corgi_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Build Export Dependencies -->
  <!-- Packages needed when other packages build against this package -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>rosgraph_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <!-- Execution Dependencies -->
  <!-- Packages required at runtime -->
  <exec_depend>corgi_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>

  <!-- Test Dependencies -->
  <!-- Optional: Packages needed only for testing -->
  <!-- Example:
       <test_depend>gtest</test_depend>
  -->

  <!-- Documentation Dependencies -->
  <!-- Optional: Packages needed only for building documentation -->
  <!-- Example:
       <doc_depend>doxygen</doc_depend>
  -->

  <!-- Export Tag -->
  <!-- Additional information can be placed here -->
  <export>
    <!-- For example, exporting plugin information -->
  </export>
</package>
