include_directories(${CMAKE_CURRENT_LIST_DIR})
include_directories(${CMAKE_PREFIX_PATH}/include/yaml-cpp)
include_directories(/usr/local/include/yaml-cpp)
# add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/cpg)
# add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/imu)
# add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/kinematic)
# add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/fsm)
# add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/estimation)
# add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/image)
# add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/fpga_driver)
# add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/corgi_ros_bridge)

add_executable(corgi_ros_bridge ./corgi_ros_bridge.cpp)
target_link_libraries(corgi_ros_bridge ${catkin_LIBRARIES} ${CMAKE_DL_LIBS} ${_CORE_LIBRARIES} motor_proto power_proto force_proto robot_proto geometry_proto yaml-cpp -lpthread)
add_dependencies(corgi_ros_bridge ${PROJECT_NAME}_generate_messages)

add_executable(corgi_ros_bridge_webots ./corgi_ros_bridge.cpp)
target_link_libraries(corgi_ros_bridge_webots ${catkin_LIBRARIES} ${CMAKE_DL_LIBS} ${_CORE_LIBRARIES} motor_proto power_proto force_proto robot_proto geometry_proto yaml-cpp -lpthread)
add_dependencies(corgi_ros_bridge_webots ${PROJECT_NAME}_generate_messages)
target_compile_definitions(corgi_ros_bridge_webots PRIVATE -DSIMULATION)